using System.Collections;
using System.Collections.Generic;
using UnityEngine;

namespace Tundayne
{
    public static class StaticStrings
    {
        public static string Horizontal = "Horizontal";
        public static string Vertical = "Vertical";

        // Animator parameters
        public static string vertical = "vertical";
        public static string horzontal = "horzontal";
        public static string aiming = "aiming";
        public static string crouch = "crouch";
        public static string sprint = "sprint";
    }
}

